Update pom description. Update Tomcat dependencies FIX : scenarios tests